src/test/ui/suggestions/pub-ident-fn-or-struct.stderr
error: missing `fn` or `struct` for method or struct definition
  --> $DIR/pub-ident-fn-or-struct.rs:11:4
   |
11 | pub S (foo) bar
   |    ^

error: aborting due to previous error

